--- a/i/in/ind/indisearch.com.html
+++ b/i/in/ind/indisearch.com.html
@@ -1,20 +1,20 @@
-<!--The following is the downloaded HTML source of the indisearch.com privacy policy that was archived on 2013-08-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130805140044id_/http%3A//www.indisearch.com/page/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the indisearch.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214224238id_/http%3A//www.indisearch.com/page/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
  <title>Privacy and Policy</title>  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link href="/themes/india/css/styles.css" rel="stylesheet" type="text/css">
-<link href="/themes/india/css/jquery.auto-complete.css" rel="stylesheet" type="text/css">
+<link href="http://www.indisearch.com/css/styles.css" rel="stylesheet" type="text/css">
+<link href="http://www.indisearch.com/css/jquery.auto-complete.css" rel="stylesheet" type="text/css">
 
 <!--[if lt IE 7]>
-     <link href="/themes/india/css/ie/ie6.css" rel="stylesheet" type="text/css" />
+     <link href="http://www.indisearch.com/css/ie/ie6.css" rel="stylesheet" type="text/css" />
    <![endif]-->
 <!--[if IE]>
-      <script type="text/javascript" src="/themes/india/js/html5.js"></script>
+      <script type="text/javascript" src="http://www.indisearch.com/js/html5.js"></script>
    <![endif]-->
-<script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" src="/themes/india/js/jquery-1.4.4.min.js"></script>
-<script type="text/javascript" src="/themes/india/js/jquery.auto-complete.js"></script>
-  <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'574fb6db-2097-4d13-ab27-ee4b2b0e8dea'});</script>
+<script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" src="http://www.indisearch.com/js/jquery-1.4.4.min.js"></script>
+<script type="text/javascript" src="http://www.indisearch.com/js/jquery.auto-complete.js"></script>
+  <script type="text/javascript" src="//w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'574fb6db-2097-4d13-ab27-ee4b2b0e8dea'});</script>
 <script type="text/javascript">
     $(document).ready(function(){ 
     $('input[name=city]').autoComplete({
@@ -42,13 +42,13 @@ $('input[name=q]').autoComplete({
     <div id="top-linkbar">
     <div class="toplink-list">
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/register">Add your business</a></li>
-            <li><a href="/cities">Browse by Cities</a></li>
-            <li><a href="/page/advertise">Advertise With Us</a></li>
+            <li><a href="http://www.indisearch.com/">Home</a></li>
+            <li><a href="https://www.indisearch.com/register">Add your business</a></li>
+            <li><a href="http://www.indisearch.com/cities">Browse by Cities</a></li>
+            <li><a href="http://www.indisearch.com/page/advertise">Advertise With Us</a></li>
         </ul>
     </div>
-    <div class="top-iconimg"><img src="/themes/india/images/top-icon.gif" width="108" height="39" border="0" usemap="#Map" alt="Follow us">
+    <div class="top-iconimg"><img src="http://www.indisearch.com/images/top-icon.gif" width="108" height="39" border="0" usemap="#Map" alt="Follow us">
         <map name="Map" id="Map"><area shape="rect" coords="5,4,28,28" href="#" target="_blank" alt="Linkede">
             <area shape="rect" coords="33,7,55,28" href="http://twitter.com/indisearch" target="_blank" alt="twitter">
             <area shape="rect" coords="59,7,78,27" href="#" target="_blank" alt="piccassa">
@@ -57,12 +57,12 @@ $('input[name=q]').autoComplete({
 </div> 
   <div id="main-container">
      <div id="searchbox-layout" class="clearfix">
-    <div class="logo"><a href="/" title="IndiSearch">India's Industrial Directory</a></div>
+    <div class="logo"><a href="http://www.indisearch.com/" title="IndiSearch">India's Industrial Directory</a></div>
       
       <div id="searchbox">
         <div class="topnav-menu">
-                             <a href="/login">Sign In</a> | <a href="/register">Join Free</a>
-                        | <a href="/wishlist">My Wishlist</a>
+                             <a href="https://www.indisearch.com/login">Sign In</a> | <a href="https://www.indisearch.com/register">Join Free</a>
+                        | <a href="http://www.indisearch.com/wishlist">My Wishlist</a>
                      </div>
           <div style="float: left; padding-left: 140px"></div>
         <div class="floatright" style="width:250px;padding-top:20px;">
@@ -80,7 +80,7 @@ $('input[name=q]').autoComplete({
         </div>
       </div>
     </div>    <div id="search-layout">
-    <form action="/page/results">
+    <form action="http://www.indisearch.com/page/results">
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tbody><tr>
           <td valign="top">&nbsp;</td>
@@ -90,12 +90,12 @@ $('input[name=q]').autoComplete({
         </tr>
         <tr>
           <td valign="middle" class="textname">What</td>
-          <td valign="middle"><input name="q" type="text" class="textfield" value="" autocomplete="off">
+          <td valign="middle"><input name="q" type="text" class="textfield" value="">
           </td>
           <td valign="middle" class="textname">Where</td>
-          <td valign="middle"><input name="city" type="text" class="textfield" value="" autocomplete="off">
+          <td valign="middle"><input name="city" type="text" class="textfield" value="">
           </td>
-          <td valign="middle"><input type="image" src="/themes/india/images/search-btn.gif" alt="Search"></td>
+          <td valign="middle"><input type="image" src="http://www.indisearch.com/images/search-btn.gif" alt="Search"></td>
         </tr>
       </tbody></table>
      </form>
@@ -185,7 +185,7 @@ Please note that this Indisearch.com privacy policy may change from time to time
     <div class="comment-box">
       <div class="usercomment" align="center">
 <span class="btn">
-<a style="font-size:14px" href="/register">Add your business for free</a>
+<a style="font-size:14px" href="https://www.indisearch.com/register">Add your business for free</a>
 </span>  
 </div>
 <div class="usercomment">
@@ -195,6 +195,7 @@ google_ad_client = "ca-pub-6887250514249020";
 google_ad_slot = "6201802552";
 google_ad_width = 300;
 google_ad_height = 250;
+google_page_url = "http://www.indisearch.com/page/privacy-policy";
 //-->
 </script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
@@ -228,11 +229,24 @@ google_ad_height = 250;
    <div id="tags-container">
     </div>
   <div id="footer-container">
-    <div class="footer-link"><a href="/page/terms">Terms of Use</a> | <a href="/page/privacy-policy">Privacy Policy</a> | <a href="/page/contact">Contact Us</a> | <a href="/page/advertise">Advertise with us </a></div>
+    <div class="footer-link"><a href="http://www.indisearch.com/page/terms">Terms of Use</a> | <a href="http://www.indisearch.com/page/privacy-policy">Privacy Policy</a> | <a href="http://www.indisearch.com/page/contact">Contact Us</a> | <a href="http://www.indisearch.com/page/advertise">Advertise with us </a></div>
     <div align="center" class="copyright-text">Copyright © 2013 Indisearch. All rights reserved.</div>
   </div></div>
  
 </div>
-    <!-- Start of StatCounter Code --><script type="text/javascript">var sc_project=6014523; var sc_invisible=1; var sc_security="9a46ddf4"; </script><script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script><noscript><div class="statcounter"><a title="counter customizable" href="http://statcounter.com/free_hit_counter.html" target="_blank"><img class="statcounter" src="http://c.statcounter.com/6014523/0/9a46ddf4/1/" alt="counter customizable" /></a></div></noscript><!-- End of StatCounter Code -->
+    <!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project=6014523; 
+var sc_invisible=1; 
+var sc_security="9a46ddf4"; 
+</script>
+<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
+<noscript><div class="statcounter"><a title="web analytics"
+href="http://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="http://c.statcounter.com/6014523/0/9a46ddf4/1/"
+alt="web analytics"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
 
-<ul class="auto-complete-list" style="display: none;"></ul></body></html>
+
+</body></html>
