--- a/t/tw/twe/tweetfind.com.html
+++ b/t/tw/twe/tweetfind.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tweetfind.com privacy policy that was archived on 2013-08-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130813193325id_/http%3A//www.tweetfind.com/p/PrivacyPolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tweetfind.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214224406id_/http%3A//www.tweetfind.com/p/PrivacyPolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html dir="ltr" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<title>Privacy&nbsp;</title>
@@ -60,26 +60,26 @@
 												<li><a href="mod/contacts/?contact=us" 0="">Contact</a></li>
 												<li><a href="p/freekloutpluginaddon.html" 0=""></a></li>
 												<li><a href="p/advertise2.html" 0=""></a></li>
-												<li><a href="p/advertise.html" 0=""><b><font size="3">Advertise</font></b></a></li>
-											</ul>
+												<li><a href="p/advertise.html" 0=""><b><font size="</a"></font></b></a></li><a href="p/advertise.html" 0=""><b><font size="</a">
+											</font></b></a></ul><a href="p/advertise.html" 0=""><b><font size="</a">
 		<!-- inventory menu end -->
 
-	</div>
-</div>
+	</font></b></a></div><a href="p/advertise.html" 0=""><b><font size="</a">
+</font></b></a></div><a href="p/advertise.html" 0=""><b><font size="</a">
 <!-- invenotory line end -->
 
 <!-- main page start -->
-<div class="page" style="width:1170px;">
+</font></b></a><b><font size="</a"><div class="page" style="width:1170px;"><a href="p/advertise.html" 0="">
 
 	<div style="clear:both;font-size:0;">&nbsp;</div>
 	
-	<div class="header-left">
-		<div class="header-right">
-			<div class="header">
+	</a><div class="header-left"><a href="p/advertise.html" 0="">
+		</a><div class="header-right"><a href="p/advertise.html" 0="">
+			</a><div class="header"><a href="p/advertise.html" 0="">
 
 				<!-- logo start -->
-				<div class="logo">
-					<a href="http://www.tweetfind.com/">
+				</a><div class="logo"><a href="p/advertise.html" 0="">
+					</a><a href="http://www.tweetfind.com/">
 													<img src="http://www.tweetfind.com/templates/tweetfind/img/logo.png" title="Twitter Directory : TweetFind " alt="Twitter Directory : TweetFind ">
 											</a>
 				</div>
@@ -139,7 +139,7 @@
 	<!-- search form start -->
 	<div class="outer-search">
 		<div class="search-form">
-			<form action="http://www.tweetfind.com/search.php" onsubmit="return checkLogin();" method="get" id="searchForm">
+			<form action="http://www.tweetfind.com/search.php" method="get" id="searchForm">
 				<table cellpadding="0" cellspacing="0">
 				<tbody><tr>
 					<td style="padding-right: 5px;">
@@ -149,8 +149,7 @@
 					<td style="text-align: right;"><input type="submit" name="search_top" id="searchTop" value="Search" class="s-button"></td>
 				</tr>
 				</tbody></table>
-<script>load_search()</script>
-			</form>
+							</form>
 		</div>
 	</div>
 	<!-- search form end -->
@@ -333,4 +332,4 @@
 
 
 
-</body></html>
+</font></b></body></html>
