--- a/s/st/sta/starbounder.org.html
+++ b/s/st/sta/starbounder.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the starbounder.org privacy policy that was archived on 2013-12-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131208050121id_/http%3A//starbounder.org/Starbounder_-_Starbound_Wiki%3APrivacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the starbounder.org privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214224716id_/http%3A//starbounder.org/Starbounder_-_Starbound_Wiki%3APrivacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" dir="ltr" class="client-nojs"><head>
 <title>Starbounder - Starbound Wiki:Privacy policy - Starbounder - Starbound Wiki</title>
@@ -23,8 +23,9 @@
 mw.config.set({"wgCanonicalNamespace":"","wgCanonicalSpecialPageName":false,"wgNamespaceNumber":0,"wgPageName":"Starbounder_-_Starbound_Wiki:Privacy_policy","wgTitle":"Starbounder - Starbound Wiki:Privacy policy","wgCurRevisionId":3341,"wgArticleId":1078,"wgIsArticle":true,"wgAction":"view","wgUserName":null,"wgUserGroups":["*"],"wgCategories":[],"wgBreakFrames":false,"wgPageContentLanguage":"en","wgSeparatorTransformTable":["",""],"wgDigitTransformTable":["",""],"wgDefaultDateFormat":"dmy","wgMonthNames":["","January","February","March","April","May","June","July","August","September","October","November","December"],"wgMonthNamesShort":["","Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"],"wgRelevantPageName":"Starbounder_-_Starbound_Wiki:Privacy_policy","wgRestrictionEdit":["sysop"],"wgRestrictionMove":["sysop"],"_US_LETTERS":"letters left","wgWikiEditorEnabledModules":{"toolbar":false,"dialogs":false,"hidesig":true,"templateEditor":false,"templates":false,"preview":false,"previewDialog":false,"publish":false,"toc":false},"htTabIndexes":[],"sfgAutocompleteValues":[],"sfgAutocompleteOnAllChars":false,"sfgFieldProperties":[],"sfgDependentFields":[],"sfgShowOnSelect":[],"sfgScriptPath":"/mediawiki/extensions/SemanticForms","wgCategoryTreePageCategoryOptions":"{\"mode\":0,\"hideprefix\":20,\"showcount\":true,\"namespaces\":false}"});
 }</script><script>if(window.mw){
 mw.loader.implement("user.options",function(){mw.user.options.set({"ccmeonemails":0,"cols":80,"date":"default","diffonly":0,"disablemail":0,"disablesuggest":0,"editfont":"default","editondblclick":0,"editsection":1,"editsectiononrightclick":0,"enotifminoredits":0,"enotifrevealaddr":0,"enotifusertalkpages":1,"enotifwatchlistpages":0,"extendwatchlist":0,"externaldiff":0,"externaleditor":0,"fancysig":0,"forceeditsummary":0,"gender":"unknown","hideminor":0,"hidepatrolled":0,"imagesize":2,"justify":0,"math":1,"minordefault":0,"newpageshidepatrolled":0,"nocache":0,"noconvertlink":0,"norollbackdiff":0,"numberheadings":0,"previewonfirst":0,"previewontop":1,"quickbar":5,"rcdays":7,"rclimit":50,"rememberpassword":0,"rows":25,"searchlimit":20,"showhiddencats":0,"showjumplinks":1,"shownumberswatching":1,"showtoc":1,"showtoolbar":1,"skin":"monobook","stubthreshold":0,"thumbsize":2,"underline":2,"uselivepreview":0,"usenewrc":0,"watchcreations":0,"watchdefault":0,"watchdeletion":0,"watchlistdays":3,
-"watchlisthideanons":0,"watchlisthidebots":0,"watchlisthideliu":0,"watchlisthideminor":0,"watchlisthideown":0,"watchlisthidepatrolled":0,"watchmoves":0,"wllimit":250,"variant":"en","language":"en","searchNs0":true,"searchNs1":false,"searchNs2":false,"searchNs3":false,"searchNs4":false,"searchNs5":false,"searchNs6":false,"searchNs7":false,"searchNs8":false,"searchNs9":false,"searchNs10":false,"searchNs11":false,"searchNs12":false,"searchNs13":false,"searchNs14":false,"searchNs15":false,"searchNs102":false,"searchNs103":false,"searchNs106":false,"searchNs107":false,"searchNs108":false,"searchNs109":false,"searchNs200":false,"searchNs201":false,"searchNs202":false,"searchNs203":false,"searchNs274":false,"searchNs275":false,"searchNs400":false,"searchNs401":false,"searchNs500":false,"searchNs501":false,"searchNs530":false,"searchNs540":false});;},{},{});mw.loader.implement("user.tokens",function(){mw.user.tokens.set({"editToken":"+\\","watchToken":false});;},{},{});
-/* cache key: starboundwiki:resourceloader:filter:minify-js:7:0b3111acb4da751af4469a1f71b4e874 */
+"watchlisthideanons":0,"watchlisthidebots":0,"watchlisthideliu":0,"watchlisthideminor":0,"watchlisthideown":0,"watchlisthidepatrolled":0,"watchmoves":0,"wllimit":250,"variant":"en","language":"en","searchNs0":true,"searchNs1":false,"searchNs2":false,"searchNs3":false,"searchNs4":false,"searchNs5":false,"searchNs6":false,"searchNs7":false,"searchNs8":false,"searchNs9":false,"searchNs10":false,"searchNs11":false,"searchNs12":false,"searchNs13":false,"searchNs14":false,"searchNs15":false,"searchNs102":false,"searchNs103":false,"searchNs106":false,"searchNs107":false,"searchNs108":false,"searchNs109":false,"searchNs200":false,"searchNs201":false,"searchNs202":false,"searchNs203":false,"searchNs274":false,"searchNs275":false,"searchNs400":false,"searchNs401":false,"searchNs500":false,"searchNs501":false,"searchNs530":false,"searchNs540":false,"searchNs560":false,"searchNs570":false,"searchNs571":false});;},{},{});mw.loader.implement("user.tokens",function(){mw.user.tokens.set({"editToken":
+"+\\","watchToken":false});;},{},{});
+/* cache key: starboundwiki:resourceloader:filter:minify-js:7:7b788ea51a5a8d28ba0787bcd60e3397 */
 }</script>
 <script>if(window.mw){
 mw.loader.load(["mediawiki.page.startup","mediawiki.legacy.wikibits","mediawiki.legacy.ajax"]);
@@ -35,25 +36,15 @@ mw.loader.load(["mediawiki.page.startup","mediawiki.legacy.wikibits","mediawiki.
 <div id="globalWrapper">
 <div id="column-content"><div id="content" class="mw-body-primary">
 	<a id="top"></a>
-	<div id="siteNotice"><div id="localNotice" lang="en" dir="ltr"><div class="topbanner" style="width:925px; height: 105px; border-top-right-radius: 1em; border-top-left-radius: 1em;margin-left: -23px; text-align:right;"><div style="margin-top:15px; margin-left:15px; float:left;"><a href="/Main_Page" title="Main Page"><img alt="Site-Logo.png" src="/mediawiki/images/0/0f/Site-Logo.png" width="210" height="65"></a></div>
-<div style="float:right;margin-right:10px;">
-<table style="height:45px; font-family:StarbounD; font-size:25px;">
-<tbody><tr>
-<td style="width:375px;"><a href="/Special:AllPages" title="Special:AllPages">877 PAGES</a>
-</td>
-<td style="display: none; width:175px;">
-</td>
-<td style="display: none;">
-</td></tr>
-<tr>
-<td style="width:375px;"><a href="/Special:NewFiles" title="Special:NewFiles">1,876 IMAGES</a>
-</td>
-<td style="width:175px;"><a href="/Special:Upload" title="Special:Upload"><img alt="Upload Image Button.png" src="/mediawiki/images/c/c0/Upload_Image_Button.png" width="168" height="24"></a>
-</td>
-<td style="display: none;">
-</td></tr>
-<tr>
-<td colspan="2" style="align:right;"><div id="searchBody" class="pBody">
+	<div id="siteNotice"><div id="localNotice" lang="en" dir="ltr"><div class="topbanner" style="width:1025px; height: 90px; border-top-right-radius: 1em; border-top-left-radius: 1em;margin-left: -23px; text-align:right;"><div style="margin-top:15px; margin-left:15px; float:left;"><a href="/Main_Page" title="Main Page"><img alt="Site-Logo.png" src="/mediawiki/images/0/0f/Site-Logo.png" width="200" height="55"></a></div>
+<div style="float:right;margin-right:10px;margin-top:10px;">
+<p><a href="/Special:Upload" title="Special:Upload"><img alt="Upload Image Button.png" src="/mediawiki/images/c/c0/Upload_Image_Button.png" width="172" height="28"></a><br>
+<span style="font-family:StarbounD;font-size:22px;"><a href="/Special:AllPages" title="Special:AllPages">2,693 PAGES</a></span><br>
+<span style="font-family:StarbounD;font-size:22px;"><a href="/Special:NewFiles" title="Special:NewFiles">6,366 IMAGES</a></span><br>
+</p>
+</div>
+<div id="searchbar" style="clear:both;float:right; margin-top:10px;">
+<p></p><div id="searchBody" class="pBody">
 <form id="searchform" action="/mediawiki/index.php">
 <input type="hidden" value="Special:Search" name="title">
 <input id="searchInput" type="search" accesskey="f" title="Search Starbounder [alt-shift-f]" name="search" autocomplete="off" placeholder="Search">
@@ -61,9 +52,8 @@ mw.loader.load(["mediawiki.page.startup","mediawiki.legacy.wikibits","mediawiki.
 <input id="mw-searchButton" class="searchButton" type="submit" title="Search the pages for this text" value="Search" name="fulltext">
 </form>
 </div>
-</td>
-<td><a href="/Special:Random" title="Random Page"><img alt="Random Page" src="/mediawiki/images/4/4c/Dice.png" width="38" height="36"></a>
-</td></tr></tbody></table></div></div>
+<p></p>
+</div></div>
 </div></div>
 	<h1 id="firstHeading" class="firstHeading"><span dir="auto">Starbounder - Starbound Wiki:Privacy policy</span></h1>
 	<div id="bodyContent" class="mw-body">
@@ -159,7 +149,7 @@ Highest expansion depth: 2/40
 Expensive parser function count: 0/100
 -->
 
-<!-- Saved in parser cache with key starboundwiki:pcache:idhash:1078-0!*!*!!en!*!* and timestamp 20131208050120 -->
+<!-- Saved in parser cache with key starboundwiki:pcache:idhash:1078-0!*!*!!en!*!* and timestamp 20140214224717 -->
 </div><div class="printfooter">
 Retrieved from "<a href="http://starbounder.org/mediawiki/index.php?title=Starbounder_-_Starbound_Wiki:Privacy_policy&amp;oldid=3341">http://starbounder.org/mediawiki/index.php?title=Starbounder_-_Starbound_Wiki:Privacy_policy&amp;oldid=3341</a>"</div>
 		<div id="catlinks" class="catlinks catlinks-allhidden"></div>		<!-- end content -->
@@ -190,7 +180,7 @@ You can view its source [e]" accesskey="e">View source</a></li>
 	</div>
 	<ul id="f-list">
 		<li id="lastmod"> This page was last modified on 1 August 2013, at 20:47.</li>
-		<li id="viewcount">This page has been accessed 335 times.</li>
+		<li id="viewcount">This page has been accessed 1,754 times.</li>
 		<li id="privacy"><a href="/Starbounder_-_Starbound_Wiki:Privacy_policy" title="Starbounder - Starbound Wiki:Privacy policy">Privacy policy</a></li>
 		<li id="about"><a href="/Starbounder_-_Starbound_Wiki:About" title="Starbounder - Starbound Wiki:About">About Starbounder - Starbound Wiki</a></li>
 		<li id="disclaimer"><a href="/Starbounder_-_Starbound_Wiki:General_disclaimer" title="Starbounder - Starbound Wiki:General disclaimer">Disclaimers</a></li>
@@ -205,10 +195,8 @@ You can view its source [e]" accesskey="e">View source</a></li>
 		<h5>Personal tools</h5>
 		<div class="pBody">
 			<ul>
-				<li id="pt-anonuserpage"><a href="/User:174.129.228.67" class="new" title="The user page for the IP address you are editing as [.]" accesskey=".">174.129.228.67</a></li>
-				<li id="pt-anontalk"><a href="/User_talk:174.129.228.67" class="new" title="Discussion about edits from this IP address [n]" accesskey="n">Talk for this IP address</a></li>
 				<li id="pt-createaccount"><a href="/mediawiki/index.php?title=Special:UserLogin&amp;returnto=Starbounder+-+Starbound+Wiki%3APrivacy+policy&amp;type=signup">Create account</a></li>
-				<li id="pt-anonlogin"><a href="/mediawiki/index.php?title=Special:UserLogin&amp;returnto=Starbounder+-+Starbound+Wiki%3APrivacy+policy" title="You are encouraged to log in; however, it is not mandatory [o]" accesskey="o">Log in</a></li>
+				<li id="pt-login"><a href="/mediawiki/index.php?title=Special:UserLogin&amp;returnto=Starbounder+-+Starbound+Wiki%3APrivacy+policy" title="You are encouraged to log in; however, it is not mandatory [o]" accesskey="o">Log in</a></li>
 			</ul>
 		</div>
 	</div>
@@ -231,4 +219,4 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 <script type="text/javascript">
 var pageTracker = _gat._getTracker("UA-42436586-1");
 pageTracker._trackPageview();
-</script><!-- Served in 0.166 secs. --></div></body></html>
+</script><!-- Served in 0.176 secs. --></div></body></html>
