--- a/w/we/web/webcamclub.com.html
+++ b/w/we/web/webcamclub.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the webcamclub.com privacy policy that was archived on 2013-11-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131120013539id_/http%3A//www.webcamclub.com%3Fc2hvdz1wcml2YWN5JndpZHRoPTkwMA%3D%3D) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the webcamclub.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214225631id_/http%3A//www.webcamclub.com%3Fc2hvdz1wcml2YWN5JndpZHRoPTkwMA%3D%3D) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns="http://www.w3.org/1999/xhtml"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script><title>Privacy Policy</title>
+	<title>Privacy Policy</title>
 
 	    <meta name="DESCRIPTION" content="Nude sexy girls live on cam, girls and couples free sex shows gorgeous babes waiting for you.">
     <meta name="KEYWORDS" content="webcam, webcams, cam, cams, live, girls, nude girls, naked girls, nude girls, free, webcam strip, webcam girls, nude, private, pussy, sexy, camgirls, live cams, adult, sexy girls naked,">
@@ -318,5 +318,5 @@ ol.subsect_2
         <div class="clear_both"></div>
     </div>
 </div>
-<script type="text/javascript">if(!NREUMQ.f){NREUMQ.f=function(){NREUMQ.push(["load",new Date().getTime()]);var e=document.createElement("script");e.type="text/javascript";e.src=(("http:"===document.location.protocol)?"http:":"https:")+"//"+"js-agent.newrelic.com/nr-100.js";document.body.appendChild(e);if(NREUMQ.a)NREUMQ.a();};NREUMQ.a=window.onload;window.onload=NREUMQ.f;};NREUMQ.push(["nrfj","beacon-2.newrelic.com","1261c34b22","1944321","MlAEY0ZRCEtYVxJQDgsaM0VdHw9WXVEeFxENRQ==",0,544,new Date().getTime(),"","","","",""]);</script>
-<script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
+
+</body></html>
