--- a/b/be/bes/best-horror-movies.com.html
+++ b/b/be/bes/best-horror-movies.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the best-horror-movies.com privacy policy that was archived on 2013-10-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131017191807id_/http%3A//ossuary.best-horror-movies.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the best-horror-movies.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214232122id_/http%3A//ossuary.best-horror-movies.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml" xml:lang="en-US" lang="en-US"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -10,7 +10,7 @@
 	
 	<meta http-equiv="Content-Style-Type" content="text/css">
 	<link href="http://ossuary.best-horror-movies.com/templates/tmpl_uni/css/common.css" rel="stylesheet" type="text/css"><link href="http://ossuary.best-horror-movies.com/templates/tmpl_uni/css/general.css" rel="stylesheet" type="text/css"><link href="http://ossuary.best-horror-movies.com/templates/tmpl_uni/css/anchor.css" rel="stylesheet" type="text/css"><link href="http://ossuary.best-horror-movies.com/templates/tmpl_uni/css/forms_adv.css" rel="stylesheet" type="text/css"><link href="http://ossuary.best-horror-movies.com/templates/tmpl_uni/css/login_form.css" rel="stylesheet" type="text/css"><link href="http://ossuary.best-horror-movies.com/templates/tmpl_uni/css/top_menu.css" rel="stylesheet" type="text/css"><link href="http://ossuary.best-horror-movies.com/templates/tmpl_uni/css/BxCustomProfileMenu.css" rel="stylesheet" type="text/css"><link href="http://ossuary.best-horror-movies.com/modules/boonex/quotes/templates/base/css/unit.css" rel="stylesheet" type="text/css"><link href="http://ossuary.best-horror-movies.com/templates/tmpl_uni/css/privacy.css" rel="stylesheet" type="text/css">
-	<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/plugins/jquery/jquery.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/plugins/jquery/jquery.jfeed.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/plugins/jquery/jquery.dimensions.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/functions.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/jquery.dolTopMenu.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/jquery.dolRSSFeed.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/jquery.float_info.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/jquery.webForms.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/plugins/jquery/jquery.form.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/jquery.dolPopup.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/common_anim.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/login.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/ie7_flash_fix.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/classes/BxDolVoting.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/user_status.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/flash/modules/global/js/swfobject.js"></script>
+	<script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/plugins/jquery/jquery.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/plugins/jquery/jquery.jfeed.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/plugins/jquery/jquery.dimensions.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/functions.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/jquery.dolTopMenu.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/jquery.dolRSSFeed.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/jquery.float_info.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/jquery.webForms.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/plugins/jquery/jquery.form.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/jquery.dolPopup.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/common_anim.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/login.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/ie7_flash_fix.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/classes/BxDolVoting.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/inc/js/user_status.js"></script><script language="javascript" type="text/javascript" src="http://ossuary.best-horror-movies.com/flash/modules/global/js/swfobject.js"></script>
     <script type="text/javascript" language="javascript">var aDolImages = {'clock': 'http://ossuary.best-horror-movies.com/templates/base/images/icons/clock.png','wf_plus': 'http://ossuary.best-horror-movies.com/templates/base/images/icons/action_fave.png','wf_minus': 'http://ossuary.best-horror-movies.com/templates/base/images/icons/action_block.png','wf_other': 'http://ossuary.best-horror-movies.com/templates/base/images/icons/folder_add.png','more': 'http://ossuary.best-horror-movies.com/templates/base/images/icons/more.png','collapse_open': 'http://ossuary.best-horror-movies.com/templates/base/images/icons/toggle_down.png','collapse_closed': 'http://ossuary.best-horror-movies.com/templates/base/images/icons/toggle_right.png','loading': 'http://ossuary.best-horror-movies.com/templates/tmpl_uni/images/loading.gif'};</script>
     <script type="text/javascript" language="javascript">var aDolLang = {'_Counter': 'Counter','_PROFILE_ERR': 'Error!\nYour username or password was incorrect. Please try again.'};</script>
     <script type="text/javascript" language="javascript">var aDolOptions = {'sys_user_info_timeout': '3'};</script>
@@ -79,8 +79,8 @@ aRayApps["video_comments"]["recorder"] = {"params": new Array('user', 'password'
     			<a href="http://www.best-horror-movies.com"><img src="http://ossuary.best-horror-movies.com/media/images/1319463287.png" class="mainLogo" alt="logo"></a>
     			<div class="quote_div">
 	<div class="daily_quotes">
-		<i>"They're here already! Your next! Your next, you're next...!"</i><br>
-		<p class="author">Dr. Miles J. Bennell, Invasion of the Body Snatchers (1956)</p>
+		<i>"You are on the road to Hell my children."</i><br>
+		<p class="author">Deewana, Hell's Ground (2007)</p>
 	</div>
 	<div class="clear_both"></div>
 </div>
@@ -89,27 +89,21 @@ aRayApps["video_comments"]["recorder"] = {"params": new Array('user', 'password'
 		<table width="100%" style="padding: 10px 0px 10px 0px;" align="center">
 	<tbody><tr>
 		<td align="center">
-			<center><script type="text/javascript"><!--
-google_ad_client = "ca-pub-4479965892179748";
-/* BHM-IndieClick-Default-728x90-7-18-11 */
-google_ad_slot = "4157423448";
-google_ad_width = 728;
-google_ad_height = 90;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></center>
+			<center><!-- BEGIN JS TAG -  ROS 728x90 < - DO NOT MODIFY -->
+<script src="http://ads.q1media.com/ttj?id=1791413" type="text/javascript"></script>
+<!-- END TAG --></center>
 
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-555918-1']);
   _gaq.push(['_setDomainName', 'best-horror-movies.com']);
+  _gaq.push(['_setAllowLinker', true]);
   _gaq.push(['_trackPageview']);
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
@@ -694,16 +688,9 @@ $(document).ready( function() {
 	<tbody><tr>
 		<td align="center">
 			<center>
-<script type="text/javascript"><!--
-google_ad_client = "ca-pub-4479965892179748";
-/* BHM-IndieClick-Default-300x250-7-18-11 */
-google_ad_slot = "9336240127";
-google_ad_width = 300;
-google_ad_height = 250;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+<!-- BEGIN JS TAG -  ROS 300X 250< - DO NOT MODIFY -->
+<script src="http://ads.q1media.com/ttj?id=1791411" type="text/javascript"></script>
+<!-- END TAG -->
 </center>
 		</td>
 	</tr>
@@ -732,8 +719,8 @@ google_ad_height = 250;
 
 
 		</div>
-		<div class="bottomCpr">Copyright © 2013 Horror Freaks Media, LLC.
-<!-- 7 40 0 79 6 --></div>
+		<div class="bottomCpr">Copyright © 2014 Horror Freaks Media, LLC.
+<!-- 7 77 0 58 6 --></div>
 		
 		<div class="clear_both"></div>
 	</div>
